worked up on few mistakes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
 <html>
     <head>
         <title>
-            Login Page
+            First page
         </title>
-        <link rel="stylesheet" href="{{url_for('static',filename = 'Login_style.css')}}" >
     </head>
     <body>
         <h1>First Page</h1>
