--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Upload
+            Upload Page
         </title>
         <link rel="stylesheet" href="{{url_for('static',filename = 'upload_style.css')}}" >
     </head>
